@@ -1,5 +1,7 @@
 pgbconsole (current development) unstable; urgency=low
 
+  * Print pg process activity info in sysstat window.
+  * Print conninfo in sysstat window.
   * Fix pg_stat_user_functions sort order.
   * Add pg_stat_user_functions screen.
   * Add ability to change min age interval for pg_stat_activity long queries.
